--- a/01-ping.yaml
+++ b/01-ping.yaml
@@ -2,4 +2,4 @@
   hosts: web
   tasks: # a list of task/module/collections
   - name: ping the server
-    ansible.builin.ping:
+    ansible.builtin.ping:
