--- a/inventory.ini
+++ b/inventory.ini
@@ -7,11 +7,11 @@ DB_URL="http://db.daws78s.online"
 [localhost]
 localhost
 
-[localhost:vars]
+#[localhost:vars]
 Course="DevOps with AWS"
 Trainer="Sivakumar"
 Duration="120hrs"
-WISHES="Morning from inventory"
+#WISHES="Morning from inventory"
 
 [db]
 172.31.40.11
