--- a/inventory.ini
+++ b/inventory.ini
@@ -7,10 +7,10 @@ DB_URL="http://db.daws78s.online"
 [localhost]
 localhost
 
-#[localhost:vars]
-Course="DevOps with AWS"
-Trainer="Sivakumar"
-Duration="120hrs"
+[localhost:vars]
+#Course="DevOps with AWS"
+#Trainer="Sivakumar"
+#Duration="120hrs"
 #WISHES="Morning from inventory"
 
 [db]
