--- a/inventory.ini
+++ b/inventory.ini
@@ -1,18 +1,18 @@
 [web]
 172.31.19.103
 
-[web:vars]
-DB_URL="http://db.daws78s.online"
+; [web:vars]
+; DB_URL="http://db.daws78s.online"
 
-[localhost]
-localhost
+; [localhost]
+; localhost
 
-[localhost:vars]
-Course="DevOps with AWS"
-Trainer="Sivakumar"
-Duration="120hrs"
-WISHES="Morning from inventory"
-
+; [localhost:vars]
+; Course="DevOps with AWS"
+; Trainer="Sivakumar"
+; Duration="120hrs"
+; WISHES="Morning from inventory"
+  
 [db]
 172.31.40.11
 
