--- a/02-nginx1.yaml
+++ b/02-nginx1.yaml
@@ -6,8 +6,8 @@
     ansible.builtin.dnf:
       name: nginx
       state: latest
-  - name: run nginx
+  - name: start nginx
     ansible.builtin.service:
-     name: nginx
-     state: started
-     enable: yes
+      name: nginx
+      state: started
+      enabled: yes
