--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -2,12 +2,12 @@
   hosts: localhost
   vars_prompt:
   - name: USERNAME
-    prompt: Please enter your username
-    private: false
+      prompt: Please enter user name
+      private: false
   - name: PASSWORD
-    prompt: Please enter your password
-    private: true
+      prompt: Please enter password
+      private: true
   tasks:
-  - name: print information
-    ansible.builtin.debug:
-      msg: "Hi, Username: {{USERNAME}}. Password is: {{PASSWORD}}"
+  - name: print iformation
+  ansible.builtin.debug:
+    msg: "Hi Usernmae {{USERNAME}} and Password is {{PASSWORD}}"
