--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -2,10 +2,10 @@
   hosts: localhost
   vars_prompt:
   - name: USERNAME
-      prompt: Please enter user name
+      prompt: "Please enter user name"
       private: false
   - name: PASSWORD
-      prompt: Please enter password
+      prompt: "Please enter password"
       private: true
   tasks:
   - name: print iformation
