--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -3,9 +3,9 @@
   tasks:
   - name: print information
     vars:
-      timings: "07:15AM IST"
-      Course: DeveOps
-      Duration: 10
-      Trainer: Hasan
+      # timings: "07:15AM IST"
+      # Course: DeveOps
+      # Duration: 10
+      # Trainer: Hasan
     ansible.builtin.debug:
       msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}. Timings are: {{timings}}"
