--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -3,7 +3,7 @@
   tasks:
   - name: print information
     vars:
-      # timings: "07:15AM IST"
+       timings: "07:15AM IST"
       # Course: DeveOps
       # Duration: 10
       # Trainer: Hasan
