--- a/10-var-preference.yaml
+++ b/10-var-preference.yaml
@@ -5,9 +5,9 @@
   vars_files:
   - vars.yaml
   vars_prompt:
-  - name: WISHES
-    prompt: Please enter Wishes
-    private: false
+  # - name: WISHES
+  #   prompt: Please enter Wishes
+  #   private: false
   tasks:
   - name: check preference
     vars:
