--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -2,13 +2,20 @@
   hosts: web
   become: yes
   tasks:
+
   - name: check the user exists or not
     ansible.builtin.command: id expense
     register: USER
     ignore_errors: true
+
   - name: print user info
     ansible.builtin.debug:
       msg: "user login error logs {{USER}}"
+
+  - name: creare user
+    ansible.builtin.command: useradd expense
+    when: USER.rc != 0 #condition
+
   - name: say hello
     ansible.builtin.debug:
       msg: "Hello"
