--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -40,4 +40,18 @@
   - name: Print min and max age
     ansible.builtin.debug:
       msg: "Min age is: {{age | min}}, Max age is: {{age | max}}"
-      
+
+- name: convert dictionary into items/list
+  hosts: localhost
+  vars:
+    my_dict: # this is called as dictionary or map or key/value pairs.
+      Course: Ansbile
+      Trainer: Sivakumar
+      Duration: 120hr
+  tasks:
+  - name: before convert
+    ansible.builtin.debug:
+      msg: "Before convert: {{ my_dict }}"
+  - name: after convert
+    ansible.builtin.debug:
+      msg: "After convert: {{ my_dict | dict2items }}"
