--- a/15-loops.yaml
+++ b/15-loops.yaml
@@ -2,7 +2,7 @@
   hosts: localhost
   tasks:
   - name: print the list
-    ansible.builtin.dubug:
+    ansible.builtin.debug:
       msg: "Hello {{item}}"
     loop:
     - shell
