--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: install packages
     ansible.builtin.dnf:
-      name: "{{Item}}"
+      name: "{{item}}"
       state: latest
     loop:
     - nginx
