--- a/18-command vs shell module.yaml
+++ b/18-command vs shell module.yaml
@@ -5,4 +5,4 @@
     ansible.builtin.command: "echo 'Hi this is command module' > /tmp/command.txt"
 
   - name: shell module
-    ansible.builtin.shell: "echo 'Hi this is command module' > /tmp/command.txt"
+    ansible.builtin.shell: "echo 'Hi this is shell module' > /tmp/command.txt"
