--- a/01-ping.yaml
+++ b/01-ping.yaml
@@ -1,4 +1,4 @@
-- name: ping the server
+- name: ping the server from ansible to remote server
   hosts: web
   tasks: # a list of task/module/collections
   - name: ping the server
