--- a/02-nginx1.yaml
+++ b/02-nginx1.yaml
@@ -2,7 +2,7 @@
   hosts: web
   become: yes
   tasks:
-  - name: installl nginx
+  - name: install nginx
     ansible.builtin.dnf:
       name: nginx
       state: latest
