--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,15 @@
 [web]
 172.31.18.85
+
+[web:vars]
+
+
+[localhost]
+localhost
+
+[localhost:vars]
+
+Course="DevOps with Aws"
+Trainer="Siva Kumar"
+Duration="3.5 Months"
+
